feature(no-jira): Adding JWT Auth and creating application_properties.yaml
