# docs/swagger.yaml
@@ -1,3 +1,4 @@
+basePath: /
 definitions:
   models.Student:
     properties:
@@ -10,9 +11,59 @@ definitions:
       name:
         type: string
     type: object
+  models.UserDTO:
+    properties:
+      password:
+        maxLength: 255
+        type: string
+      username:
+        maxLength: 255
+        type: string
+    type: object
+host: localhost:9000
 info:
   contact: {}
+  description: This is a sample server for managing students.
+  title: Students API
+  version: "1.0"
 paths:
+  /:
+    get:
+      consumes:
+      - application/json
+      description: A method to get a greeting
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+      summary: Greeting
+      tags:
+      - Greeting
+  /login:
+    post:
+      consumes:
+      - application/json
+      description: A method to authentication and get a token
+      parameters:
+      - description: User DTO
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/models.UserDTO'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+      summary: Login
+      tags:
+      - Login
   /students:
     get:
       consumes:
@@ -25,6 +76,8 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/models.Student'
+      security:
+      - ApiKeyAuth: []
       summary: Get All Students
       tags:
       - Students
@@ -46,6 +99,8 @@ paths:
           description: Created
           schema:
             $ref: '#/definitions/models.Student'
+      security:
+      - ApiKeyAuth: []
       summary: Create Student
       tags:
       - Students
@@ -65,6 +120,8 @@ paths:
       responses:
         "200":
           description: OK
+      security:
+      - ApiKeyAuth: []
       summary: Delete Student
       tags:
       - Students
@@ -85,6 +142,8 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/models.Student'
+      security:
+      - ApiKeyAuth: []
       summary: Get Student by ID
       tags:
       - Students
@@ -111,6 +170,8 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/models.Student'
+      security:
+      - ApiKeyAuth: []
       summary: Edit Student
       tags:
       - Students
@@ -137,6 +198,8 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/models.Student'
+      security:
+      - ApiKeyAuth: []
       summary: Update Student
       tags:
       - Students
@@ -158,7 +221,14 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/models.Student'
+      security:
+      - ApiKeyAuth: []
       summary: Get Student by Fiscal Number
       tags:
       - Students
+securityDefinitions:
+  ApiKeyAuth:
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
